<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8F8F8"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal|center_vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dummy"
                android:src="@drawable/alert"
                android:visibility="gone" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="提示"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_paw" />

        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/body_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text=""
                android:textColor="@color/gray_18"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_button"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_button"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>