<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/transparent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/blue_cb">

        <LinearLayout
            android:id="@+id/header_back"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_title_button"
            android:clickable="true"
            android:gravity="center"
            android:onClick="doWork">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/dummy"
                android:scaleType="fitXY"
                android:src="@drawable/ic_back"/>
        </LinearLayout>

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </RelativeLayout>

    <!--扫描界面布局应使用帧布局，否则可能产生扫描不灵敏的现象-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1">

        <SurfaceView
            android:id="@+id/preview_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <com.easier.code.util.view.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/transparent" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/white_aa"
            android:text="@string/photo_file"
            android:textSize="13dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#C8C8C8"
            android:visibility="gone"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/local_photos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="doWork"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/photoblum" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/photo_file"
                    android:textSize="13dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/open_light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="doWork"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/flashlight" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/open_light"
                    android:textSize="13dp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>